# fraud_agent

./: .gitignore  README.md  docker-compose.yml
back/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  setup.sh
back/app/: __init__.py
back/app/agents/: __init__.py  behavioral_pattern.py  debate_agents.py  decision_arbiter.py  evidence_aggregator.py  explainability.py  external_threat_intel.py  graph.py  internal_policy_rag.py  transaction_context.py
back/app/api/: hitl.py  transactions.py
back/app/core/: config.py  constants.py  llm.py  logger.py  structures.py
back/app/data/: loader.py  transactions.csv
back/app/db/: models.py  session.py
back/app/models/: schemas.py
back/app/services/: db_service.py  reporting_service.py
deployment/azure/: main.tf  terraform.tfvars.example  variables.tf
front/: Dockerfile  README.md  package-lock.json  package.json
front/src/app/: globals.css  layout.tsx  page.tsx
front/src/app/hitl/: page.tsx
front/src/app/monitoring/: page.tsx
front/src/components/: AuditTrailModal.tsx  TransactionForm.tsx
front/src/components/layout/: Navbar.tsx
front/src/lib/: api.ts
