[project]
name = "fraud-detection-backend"
version = "0.1.0"
description = "Sistema Multi-Agente de Detección de Fraude"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # Web Framework
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  # AI & Agents
  "langchain>=1.2.7",
  "langgraph>=1.0.7",
  "langchain-openai>=1.1.7",
  "langchain-azure-ai>=1.0.0",
  "langchain-community>=0.0.20",
  "openai>=1.10.0",
  # Database
  "sqlalchemy>=2.0.25",
  "alembic>=1.13.1",
  "aiosqlite>=0.19.0",
  # Vector DB & Search
  "azure-search-documents>=11.4.0",
  "azure-identity>=1.15.0",
  # Web Search
  "tavily-python>=0.3.0",
  # Cache (optional)
  "redis>=5.0.1",
  # Utils
  "python-dotenv>=1.0.0",
  "httpx>=0.26.0",
  "tenacity>=8.2.3",
  "python-multipart>=0.0.6",
  "faiss-cpu>=1.13.2",
  "numpy>=2.4.1",
  "langchain-tavily>=0.2.17",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.4", "pytest-asyncio>=0.23.3", "ruff>=0.1.14", "mypy>=1.8.0"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
